humboldt/envoy-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: humboldt-envoy-gw
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
