humboldt/envoy-gateway/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: humboldt-internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: humboldt-envoy-gw
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: humboldt-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: internal-gateway-cert-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
